さらに更新！

--- a/company.html
+++ b/company.html
@@ -52,8 +52,8 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
         <li><a class="ac_menu">アプリ作成について</a>
         <div class="ac_list">
         <ul>
-        <li><a href="sample.html">モバイルアプリ</a></li>
-        <li><a href="#">webアプリ</a></li>
+        <li><a href="sample.html">webアプリ</a></li>
+        <li><a href="#">モバイルアプリ</a></li>
         <li><a href="#">webページ</a></li>
         <li><a href="#">インフラ</a></li>
         </ul>
@@ -71,7 +71,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
         </div>
         </li>  
         <li><a href="faq.html">FAQ</a></li>
-        <li><a href="company.html" class="ac_menu">会社案内</a>
+        <li><a href="company.html" >会社案内</a>
         <div class="ac_list">
         <ul>
         </ul>
@@ -102,10 +102,12 @@ Company Profile
 
 <div class="effect">
 <h3>代表あいさつ</h3>
-<img src="img/準備中イラスト.png" alt="代表サンプル" class="img_right">
-  <p>代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。<br>
-代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。<br>
-代表あいさつのサンプル文言になります。適当な文言に置き換えてお使いください。</p>
+<img src="img/自分のアイコン.png" alt="代表サンプル" class="img_right">
+  <p>フカセと申します<br>
+  アプリの開発やら、webページの作成やら、いろいろやっております。<br>
+  
+  
+  </p>
 </div>
 
 <div class="effect d_02">
@@ -122,7 +124,7 @@ Company Profile
   </tr>
   <tr>
     <th>本　社</th>
-    <td>〒３８９－０２０３<br />
+    <td><br />
 千葉寄りの東京<br />
 TEL.080-6842-6878</td>
   </tr>
