--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,8 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
         <li><a class="ac_menu">アプリ作成について</a>
         <div class="ac_list">
         <ul>
-        <li><a href="sample.html">モバイルアプリ</a></li>
-        <li><a href="#">webアプリ</a></li>
+        <li><a href="sample.html">webアプリ</a></li>
+        <li><a href="#">モバイルアプリ</a></li>
         <li><a href="#">webページ</a></li>
         <li><a href="#">インフラ</a></li>
         </ul>
@@ -72,7 +72,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
         </div>
         </li>  
         <li><a href="faq.html">FAQ</a></li>
-        <li><a href="company.html" class="ac_menu">会社案内</a>
+        <li><a href="company.html" >会社案内</a>
         <div class="ac_list">
         <ul>
         </ul>
