--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
       <li><a class="ac_menu">アプリ作成について</a>
       <div class="ac_list">
       <ul>
-      <li><a href="sample.html">モバイルアプリ</a></li>
-      <li><a href="#">webアプリ</a></li>
+      <li><a href="sample.html">webアプリ</a></li>
+      <li><a href="sample_2.html">モバイルアプリ</a></li>
       <li><a href="#">webページ</a></li>
       <li><a href="#">インフラ</a></li>
       </ul>
@@ -69,7 +69,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
       </div>
       </li>  
       <li><a href="faq.html">FAQ</a></li>
-      <li><a href="company.html" class="ac_menu">会社案内</a>
+      <li><a href="company.html" >会社案内</a>
       <div class="ac_list">
       <ul>
       </ul>
@@ -91,10 +91,10 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
   <ul>
   <li class="effect d_02"><a href="sample.html">
     <!-- <span class="balloon">NEW!</span> -->
-    <img src="image/モバイルアプリアイコン.jpg" alt="サンプルイメージ">
-  <span class="btn_check"><i class="fas fa-arrow-right"></i>モバイル</span></a></li>
-  <li class="effect d_04"><a href="#"><img src="image/webアプリアイコン.jpg" alt="サンプルイメージ">
+    <img src="image/webアプリアイコン.jpg" alt="サンプルイメージ">
   <span class="btn_check"><i class="fas fa-arrow-right"></i>web</span></a></li>
+  <li class="effect d_04"><a href="sample_2.html"><img src="image/モバイルアプリアイコン.jpg" alt="サンプルイメージ">
+  <span class="btn_check"><i class="fas fa-arrow-right"></i>モバイル</span></a></li>
   <li class="effect d_06"><a href="#"><img src="image/インフラ.jpg" alt="サンプルイメージ">
   <span class="btn_check"><i class="fas fa-arrow-right"></i>インフラ</span></a></li>
   </ul>
