--- a/sample.html
+++ b/sample.html
@@ -54,8 +54,8 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
         <li><a class="ac_menu">アプリ作成について</a>
         <div class="ac_list">
         <ul>
-        <li><a href="sample.html">モバイルアプリ</a></li>
-        <li><a href="#">webアプリ</a></li>
+        <li><a href="sample.html">webアプリ</a></li>
+        <li><a href="sample_2.html">モバイルアプリ</a></li>
         <li><a href="#">webページ</a></li>
         <li><a href="#">インフラ</a></li>
         </ul>
@@ -73,7 +73,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
         </div>
         </li>  
         <li><a href="faq.html">FAQ</a></li>
-        <li><a href="company.html" class="ac_menu">会社案内</a>
+        <li><a href="company.html" >会社案内</a>
         <div class="ac_list">
         <ul>
         </ul>
@@ -88,7 +88,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 
 
 <div id="sub_top" class="sample">
-Sample page
+webアプリ
 </div>
 
 <div class="pankuzu">
@@ -106,61 +106,29 @@ Sample page
 
 <div class="effect d_02">
 <img src="img/準備中イラスト.png" alt="サンプルイメージ" class="img_left">
-<h5></h5>
-<p>新しい小見出しの内容をここに追加してください。</p>
-まずは、webアプリの作成手順についてご説明いたします。
-<p></p>
-<p>汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。<br>
-  汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。</p>
+<h5>作ったもの</h5>
+<a href="https://github.com/fukashin/taskmanagementkun"><p>プロジェクト管理ツール的なもの</p></a>
+
+<p>使用言語<br>フロントエンド：javascript
+<br>バックエンド：python
+</p>
 
 </div>
 
 
 <div class="effect">
-<h3>確認用サンプル大見出しです</h3>
+<h3>方針、戦略を決める</h3>
 
 <img src="img/準備中イラスト.png" alt="サンプルイメージ" class="img_right">
-<p>汎用ページ、確認用のサンプル文言になります。 汎用ページ、確認用のサンプル文言になります。 汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。<br>
-汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。</p>
-<h4>確認用サンプル小見出しです</h4>
-<p>汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。<br>
-  汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。</p>
-<p class="check">※汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。</p>
-</div>
+<p>まずアプリを作るうえで誰にどんな価値をもたらすかを明確にします。
+</p>
 
-<div class="effect">
-<h4>汎用テーブルのサンプル</h4>
-<table class="table_02">
-  <tr>
-    <th>サンプル商品A</th>
-    <td>サンプル商品価格<span class="price">19,800</span>円</td>
-  </tr>
-  <tr>
-    <th>サンプル商品B</th>
-    <td>サンプル商品価格<span class="price">29,800</span>円</td>
-  </tr>
-  <tr>
-    <th>サンプル商品C</th>
-    <td>サンプル商品価格<span class="price">39,800</span>円</td>
-  </tr>
-</table>
-
-<div class="btn_001"><a href="contact.html"><i class="fas fa-shopping-cart"></i>ご注文・お問い合わせはコチラ</a></div>
-
-</div>
-
-
-</div>
-</div>
-
-
-<footer>
-<div class="cont_wrap">
-<ul class="f_bn">
-      <li><a href="#"><i class="fas fa-book"></i>Blog</a></li>
-      <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
-      <li><a href="#"><i class="fab fa-facebook-square"></i>Facebook</a></li>
+<ul>
+  <li><p>誰がこのアプリを利用するのか？</p></li>
+  <li><p>どんな機能が必要か？（コアとなる機能）</p></li>
+  <li><p>どのようなデザインにするか？</p></li>
 </ul>
+</p>
   <address>
   Copyright (C) MegaPx. All Rights Reserved.
   </address>
