--- a/sample_2.html
+++ b/sample_2.html
@@ -54,8 +54,8 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
         <li><a class="ac_menu">アプリ作成について</a>
         <div class="ac_list">
         <ul>
-        <li><a href="sample.html">モバイルアプリ</a></li>
-        <li><a href="#">webアプリ</a></li>
+        <li><a href="sample.html">webアプリ</a></li>
+        <li><a href="sample_2.html">モバイルアプリ</a></li>
         <li><a href="#">webページ</a></li>
         <li><a href="#">インフラ</a></li>
         </ul>
@@ -73,7 +73,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
         </div>
         </li>  
         <li><a href="faq.html">FAQ</a></li>
-        <li><a href="company.html" class="ac_menu">会社案内</a>
+        <li><a href="company.html" >会社案内</a>
         <div class="ac_list">
         <ul>
         </ul>
@@ -94,21 +94,23 @@ Sample page
 <div class="pankuzu">
 <ul>
 <li><a href="index.html"><i class="fas fa-home"></i>HOME</a></li>
-<li>汎用ページ</li>
+<li>モバイルアプリ</li>
 </ul>
 </div>
 
 <div class="content">
-<h2 class="effect">汎用ページ<br>
-<span>汎用ページのサンプルです</span></h2>
+<h2 class="effect">モバイルアプリ<br>
+<span>モバイルアプリの作成手順について</span></h2>
 <div class="cont_wrap">
 
 <div class="effect d_02">
 <img src="img/準備中イラスト.png" alt="サンプルイメージ" class="img_left">
-<p>汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。<br>
-汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。</p>
-<p>汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。<br>
-  汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。</p>
+<h5>作ったもの</h5>
+<a href="https://github.com/fukashin/taskmanagementkun"><p>カレンダーアプリ</p></a>
+
+<p>使用言語<br>フロントエンド：Flutter
+<br>バックエンド：python(django)
+</p>
 
 </div>
 
