--- a/works.html
+++ b/works.html
@@ -52,8 +52,8 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
         <li><a class="ac_menu">アプリ作成について</a>
         <div class="ac_list">
         <ul>
-        <li><a href="sample.html">モバイルアプリ</a></li>
-        <li><a href="#">webアプリ</a></li>
+        <li><a href="sample.html">webアプリ</a></li>
+        <li><a href="#">モバイルアプリ</a></li>
         <li><a href="#">webページ</a></li>
         <li><a href="#">インフラ</a></li>
         </ul>
@@ -71,7 +71,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
         </div>
         </li>  
         <li><a href="faq.html">FAQ</a></li>
-        <li><a href="company.html" class="ac_menu">会社案内</a>
+        <li><a href="company.html" >会社案内</a>
         <div class="ac_list">
         <ul>
         </ul>
@@ -91,48 +91,18 @@ Works
 <div class="pankuzu">
 <ul>
 <li><a href="index.html"><i class="fas fa-home"></i>HOME</a></li>
-<li>施工実績</li>
+<li>作成例</li>
 </ul>
 </div>
 
 <div class="content">
-<h2 class="effect">施工実績<br>
-<span>施工実績のサンプルになります</span></h2>
+<h2 class="effect">作成例<br>
+<span>つくったアプリの一覧です</span></h2>
 <div class="cont_wrap">
 
 <div class="effect d_02">
 
 <ul class="works_list">
-<li><a href="#"><img src="img/sample_001s.jpg" alt="サンプルイメージ" >
-<span>サンプル実績001</span></a></li>
-<li><a href="#"><img src="img/sample_002s.jpg" alt="サンプルイメージ" >
-<span>サンプル実績002</span></a></li>
-<li><a href="#"><img src="img/sample_003s.jpg" alt="サンプルイメージ" >
-<span>サンプル実績003</span></a></li>
-<li><a href="#"><img src="img/sample_001s.jpg" alt="サンプルイメージ" >
-<span>サンプル実績001</span></a></li>
-<li><a href="#"><img src="img/sample_002s.jpg" alt="サンプルイメージ" >
-<span>サンプル実績002</span></a></li>
-<li><a href="#"><img src="img/sample_003s.jpg" alt="サンプルイメージ" >
-<span>サンプル実績003</span></a></li>
-<li><a href="#"><img src="img/sample_001s.jpg" alt="サンプルイメージ" >
-<span>サンプル実績001</span></a></li>
-<li><a href="#"><img src="img/sample_002s.jpg" alt="サンプルイメージ" >
-<span>サンプル実績002</span></a></li>
-<li><a href="#"><img src="img/sample_003s.jpg" alt="サンプルイメージ" >
-<span>サンプル実績003</span></a></li>
-<li><a href="#"><img src="img/sample_001s.jpg" alt="サンプルイメージ" >
-<span>サンプル実績001</span></a></li>
-<li><a href="#"><img src="img/sample_002s.jpg" alt="サンプルイメージ" >
-<span>サンプル実績002</span></a></li>
-<li><a href="#"><img src="img/sample_003s.jpg" alt="サンプルイメージ" >
-<span>サンプル実績003</span></a></li>
-<li><a href="#"><img src="img/sample_001s.jpg" alt="サンプルイメージ" >
-<span>サンプル実績001</span></a></li>
-<li><a href="#"><img src="img/sample_002s.jpg" alt="サンプルイメージ" >
-<span>サンプル実績002</span></a></li>
-<li><a href="#"><img src="img/sample_003s.jpg" alt="サンプルイメージ" >
-<span>サンプル実績003</span></a></li>
 </ul>
 
 </div>
