アプリのページを作成

--- a/sample.html
+++ b/sample.html
@@ -107,7 +107,7 @@ webアプリ
 <div class="effect d_02">
 <img src="img/準備中イラスト.png" alt="サンプルイメージ" class="img_left">
 <h5>作ったもの</h5>
-<a href="https://github.com/fukashin/taskmanagementkun"><p>プロジェクト管理ツール的なもの</p></a>
+<a href="https://github.com/fukashin/taskmanagementkun" target="_blank"><p>プロジェクト管理ツール的なもの</p></a>
 
 <p>使用言語<br>フロントエンド：javascript
 <br>バックエンド：python
