--- a/sample_2.html
+++ b/sample_2.html
@@ -106,7 +106,12 @@ Sample page
 <div class="effect d_02">
 <img src="img/準備中イラスト.png" alt="サンプルイメージ" class="img_left">
 <h5>作ったもの</h5>
-<a href="https://github.com/fukashin/taskmanagementkun"><p>カレンダーアプリ</p></a>
+<a><p>カレンダーアプリ 　　なくなった！！多分前のSSDに入ってるかも</p></a>
+
+<p>基本的にはandloidアプリ作成です
+  <br>iphoneアプリは作成経験ありません！
+  <br>Flutterはクロスプラットフォームなのでiphoneアプリも作れはします。</p>
+
 
 <p>使用言語<br>フロントエンド：Flutter
 <br>バックエンド：python(django)
@@ -116,11 +121,13 @@ Sample page
 
 
 <div class="effect">
-<h3>確認用サンプル大見出しです</h3>
+<h3>アプリ作成は作って確認を繰り返して作っていく</h3>
 
 <img src="img/準備中イラスト.png" alt="サンプルイメージ" class="img_right">
-<p>汎用ページ、確認用のサンプル文言になります。 汎用ページ、確認用のサンプル文言になります。 汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。<br>
-汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。</p>
+<p>作る→確認→直すを繰り返していき、<br>使用感や改善点を集めてレビューして直す！</p>
+
+<p>ウォータフォールよりはアジャイルかも</p>
+
 <h4>確認用サンプル小見出しです</h4>
 <p>汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。<br>
   汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。</p>
