問合わせを修正、footerを修正

--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 
 <link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="css/mailform.css" />
+<link rel="stylesheet" href="css/contact.css" />
 
 <link href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet"> 
@@ -64,7 +65,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
         <div class="ac_list">
         <ul>
         <li><a href="works.html">マッチングアプリ（モバイル）</a></li>
-        <li><a href="works.html">プロジェクト管理（webアプリ）</a></li>
+        <li><a href="works.html">プロジェクト管理（webアプリ）</a></li>　
         <li><a href="works.html">掲示板（webアプリ）</a></li>
         <li><a href="works.html">LINEボット（モバイル）</a></li>
         <li><a href="works.html">マッチングアプリ（モバイル）</a></li>
@@ -74,8 +75,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
         <li><a href="faq.html">FAQ</a></li>
         <li><a href="company.html" >会社案内</a>
         <div class="ac_list">
-        <ul>
-        </ul>
+        <ul> 
         </div>
         </li>
       </ul>
@@ -102,59 +102,22 @@ Contact us
 <div class="cont_wrap">
 
 <div class="effect d_02">
-<h3>お問合わせフォーム</h3>
-  <p>下記フォームに必要事項をご入力いただき、送信してください。<br>
-<span class="chui">※このフォームは表示サンプルになります。実際に動作させるには、別途送信プログラム等が必要になります。<br>※設置代行（有料）も行っておりますので、お気軽にご相談ください。</span>
-</p>
-<form action="#" method="post" id="mail_form">
-		<dl>
-        <dt>会社名<span>Your company name</span></dt>
-			<dd><input type="text" id="name_1" name="name_1" value="" /> </dd>
-			
-			<dt>お名前<span>Your Name</span></dt>
-			<dd class="required"><input type="text" id="name_2" name="name_2" value="" /></dd>
-
-			<dt>メールアドレス<span>Mail Address</span></dt>
-			<dd class="required"><input type="text" id="mail_address" name="mail_address" value="" /></dd>
-			
-			<dt>メールアドレス(確認)<span>Mail Address Confirm</span></dt>
-			<dd class="required"><input type="text" id="mail_address_confirm" name="mail_address_confirm" value="" /></dd>
-			
-			<dt>お問い合わせ種類<span>Inquiry Kind</span></dt>
-			<dd class="required">
-            <select id="kind" name="kind">
-					<option value="">選択してください</option>
-					<option value="ご依頼・ご相談">ご依頼・ご相談</option>
-                    <option value="廃墟について">廃墟について</option>
-                    <option value="ご意見・クレーム">ご意見・クレーム</option>
-					<option value="その他お問い合わせ">その他お問い合わせ</option>
-				</select>
-			</dd>
-			
-			<dt>電話番号<span>Phone Number</span></dt>
-			<dd><input type="text" id="phone" name="phone" value="" /></dd>
-			
-			<dt>お問い合わせ内容<span>Mail Contents</span></dt>
-			<dd class="required"><textarea id="mail_contents" name="mail_contents" cols="40" rows="5"></textarea></dd>
-			
-			<dt>送信する<span>Send</span></dt>
-			<dd class="required"><input type="submit" id="mail_submit_button" name="mail_submit_button" value="送信する" /></dd>
-		</dl>
-	</form>
-
+<h3>お問合わせフォームはないのでXからダイレクトメッセージをお願いします</h3>
 </div>
 
+<ul class="f_bn">
+  <li><a href="https://twitter.com/SivildJ97098" target="_blank"><i class="fab fa-twitter"></i>X(旧Twitter)</a></li>
+</ul>
 
-</div>
-</div>
+<h1><a href="https://twitter.com/SivildJ97098"></a></h1>
 
 
 <footer>
 <div class="cont_wrap">
 <ul class="f_bn">
-      <li><a href="#"><i class="fas fa-book"></i>Blog</a></li>
-      <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
-      <li><a href="#"><i class="fab fa-facebook-square"></i>Facebook</a></li>
+      <!-- <li><a href="#"><i class="fas fa-book"></i>Blog</a></li> -->
+      <li><a href="https://twitter.com/SivildJ97098" target="_blank"><i class="fab fa-twitter"></i>Twitter</a></li>
+      <!-- <li><a href="#"><i class="fab fa-facebook-square"></i>Facebook</a></li> -->
 </ul>
   <address>
   Copyright (C) MegaPx. All Rights Reserved.
