--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 <footer>
 <div class="cont_wrap">
 <ul class="f_bn">
-      <li><a href="#"><i class="fas fa-book"></i>Blog</a></li>
-      <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
-      <li><a href="#"><i class="fab fa-facebook-square"></i>Facebook</a></li>
+      <!-- <li><a href="#"><i class="fas fa-book"></i>Blog</a></li> -->
+      <li><a href="https://twitter.com/SivildJ97098" target="_blank"><i class="fab fa-twitter"></i>Twitter</a></li>
+      <!-- <li><a href="#"><i class="fab fa-facebook-square"></i>Facebook</a></li> -->
 </ul>
   <address>
   Copyright (C) MegaPx. All Rights Reserved.
