--- a/sample.html
+++ b/sample.html
@@ -15,7 +15,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 -->
 
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-<title>WEBアプリ</title>
+<title>webアプリ</title>
 <meta name="Keywords" content="レスポンシブ,HTMLテンプレート,ホームページ制作" />
 <meta name="Description" content="汎用ページ、最新レスポンシブHTMLテンプレート no.002。このサイトの説明文を入れてください。" />
 
@@ -129,19 +129,26 @@ webアプリ
   <li><p>どのようなデザインにするか？</p></li>
 </ul>
 </p>
-  <address>
-  Copyright (C) MegaPx. All Rights Reserved.
-  </address>
-  
-  <!--　削除禁止【ＰＲ枠】ここから　--> 
-<!--prno.180216ver2.01set018--> 
-<div class="box_pr"><ul>
-<li>Design by <a href="https://www.megapx.com/" title="ホームページ制作・ロゴデザイン：メガピクス" target="_blank">Megapx</a></li>
-<li>Template by <a href="http://www.s-hoshino.com/" title="HTMLテンプレート配布元：フリー素材屋Hoshino" target="_blank">s-hoshino.com</a></li>
-</ul></div>
-<!--　/削除禁止【ＰＲ枠】ここまで　--> 
-  </div>
-</footer>
+<footer>
+  <div class="cont_wrap">
+  <ul class="f_bn">
+        <!-- <li><a href="#"><i class="fas fa-book"></i>Blog</a></li> -->
+        <li><a href="https://twitter.com/SivildJ97098" target="_blank"><i class="fab fa-twitter"></i>Twitter</a></li>
+        <!-- <li><a href="#"><i class="fab fa-facebook-square"></i>Facebook</a></li> -->
+  </ul>
+    <address>
+    Copyright (C) MegaPx. All Rights Reserved.
+    </address>
+    
+    <!--　削除禁止【ＰＲ枠】ここから　--> 
+  <!--prno.180216ver2.01set018--> 
+  <div class="box_pr"><ul>
+  <li>Design by <a href="https://www.megapx.com/" title="ホームページ制作・ロゴデザイン：メガピクス" target="_blank">Megapx</a></li>
+  <li>Template by <a href="http://www.s-hoshino.com/" title="HTMLテンプレート配布元：フリー素材屋Hoshino" target="_blank">s-hoshino.com</a></li>
+  </ul></div>
+  <!--　/削除禁止【ＰＲ枠】ここまで　--> 
+    </div>
+  </footer>
 
 
 <div class="to_top"><a href="#"><img src="img/i_top.png" alt="ページトップへ戻る" ></a></div>
