--- a/faq.html
+++ b/faq.html
@@ -140,25 +140,26 @@ FAQ
 
 
 <footer>
-<div class="cont_wrap">
-<ul class="f_bn">
-      <li><a href="#"><i class="fas fa-book"></i>Blog</a></li>
-      <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
-      <li><a href="#"><i class="fab fa-facebook-square"></i>Facebook</a></li>
-</ul>
-  <address>
-  Copyright (C) MegaPx. All Rights Reserved.
-  </address>
-  
-  <!--　削除禁止【ＰＲ枠】ここから　--> 
-<!--prno.180216ver2.01set018--> 
-<div class="box_pr"><ul>
-<li>Design by <a href="https://www.megapx.com/" title="ホームページ制作・ロゴデザイン：メガピクス" target="_blank">Megapx</a></li>
-<li>Template by <a href="http://www.s-hoshino.com/" title="HTMLテンプレート配布元：フリー素材屋Hoshino" target="_blank">s-hoshino.com</a></li>
-</ul></div>
-<!--　/削除禁止【ＰＲ枠】ここまで　--> 
-  </div>
-</footer>
+  <div class="cont_wrap">
+  <ul class="f_bn">
+        <!-- <li><a href="#"><i class="fas fa-book"></i>Blog</a></li> -->
+        <li><a href="https://twitter.com/SivildJ97098" target="_blank"><i class="fab fa-twitter"></i>Twitter</a></li>
+        <!-- <li><a href="#"><i class="fab fa-facebook-square"></i>Facebook</a></li> -->
+  </ul>
+    <address>
+    Copyright (C) MegaPx. All Rights Reserved.
+    </address>
+    
+    <!--　削除禁止【ＰＲ枠】ここから　--> 
+  <!--prno.180216ver2.01set018--> 
+  <div class="box_pr"><ul>
+  <li>Design by <a href="https://www.megapx.com/" title="ホームページ制作・ロゴデザイン：メガピクス" target="_blank">Megapx</a></li>
+  <li>Template by <a href="http://www.s-hoshino.com/" title="HTMLテンプレート配布元：フリー素材屋Hoshino" target="_blank">s-hoshino.com</a></li>
+  </ul></div>
+  <!--　/削除禁止【ＰＲ枠】ここまで　--> 
+    </div>
+  </footer>
+  </footer>
 
 <div class="to_top"><a href="#"><img src="img/i_top.png" alt="ページトップへ戻る" ></a></div>
 
