ボールゲームを追加

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
       <ul>
       <li><a href="sample.html">webアプリ</a></li>
       <li><a href="sample_2.html">モバイルアプリ</a></li>
-      <li><a href="#">webページ</a></li>
+      <li><a href="stopwatch.html">webページ</a></li>
       <li><a href="#">インフラ</a></li>
       </ul>
       </div>
