--- a/stopwatch.html
+++ b/stopwatch.html
@@ -15,7 +15,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 -->
 
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-<title>モバイルアプリ</title>
+<title>シンプルストップウォッチ</title>
 <meta name="Keywords" content="レスポンシブ,HTMLテンプレート,ホームページ制作" />
 <meta name="Description" content="汎用ページ、最新レスポンシブHTMLテンプレート no.002。このサイトの説明文を入れてください。" />
 
@@ -87,86 +87,12 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
   <!----------------------------------- ここまでヘッダーは共通部品 ---------------------------------------------->
 
 
-<div id="sub_top" class="sample">
-Sample page
-</div>
-
-<div class="pankuzu">
-<ul>
-<li><a href="index.html"><i class="fas fa-home"></i>HOME</a></li>
-<li>モバイルアプリ</li>
-</ul>
-</div>
-
-<div class="content">
-<h2 class="effect">モバイルアプリ<br>
-<span>モバイルアプリの作成手順について</span></h2>
-<div class="cont_wrap">
-
-<div class="effect d_02">
-<img src="img/準備中イラスト.png" alt="サンプルイメージ" class="img_left">
-<h5>作ったもの</h5>
-<a><p>カレンダーアプリ 　　なくなった！！多分前のSSDに入ってるかも</p></a>
-
-<p>基本的にはandloidアプリ作成です
-  <br>iphoneアプリは作成経験ありません！
-  <br>Flutterはクロスプラットフォームなのでiphoneアプリも作れはします。</p>
-
-
-<p>使用言語<br>フロントエンド：Flutter
-<br>バックエンド：python(django)
-</p>
-
-</div>
-
-
-<div class="effect">
-<h3>アプリ作成は作って確認を繰り返して作っていく</h3>
-
-<img src="img/準備中イラスト.png" alt="サンプルイメージ" class="img_right">
-<p>作る→確認→直すを繰り返していき、<br>使用感や改善点を集めてレビューして直す！</p>
-
-<p>ウォータフォールよりはアジャイルかも</p>
-
-<h4>確認用サンプル小見出しです</h4>
-<p>汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。<br>
-  汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。</p>
-<p class="check">※汎用ページ、確認用のサンプル文言になります。 適当な文言に置きかえてお使いください。</p>
-</div>
-
-<div class="effect">
-<h4>汎用テーブルのサンプル</h4>
-<table class="table_02">
-  <tr>
-    <th>サンプル商品A</th>
-    <td>サンプル商品価格<span class="price">19,800</span>円</td>
-  </tr>
-  <tr>
-    <th>サンプル商品B</th>
-    <td>サンプル商品価格<span class="price">29,800</span>円</td>
-  </tr>
-  <tr>
-    <th>サンプル商品C</th>
-    <td>サンプル商品価格<span class="price">39,800</span>円</td>
-  </tr>
-</table>
-
-<div class="btn_001"><a href="contact.html"><i class="fas fa-shopping-cart"></i>ご注文・お問い合わせはコチラ</a></div>
-
-</div>
-
-
-</div>
-</div>
-
-
-<footer>
-  <div class="cont_wrap">
-  <ul class="f_bn">
-        <!-- <li><a href="#"><i class="fas fa-book"></i>Blog</a></li> -->
-        <li><a href="https://twitter.com/SivildJ97098" target="_blank"><i class="fab fa-twitter"></i>Twitter</a></li>
-        <!-- <li><a href="#"><i class="fab fa-facebook-square"></i>Facebook</a></li> -->
-  </ul>
+  <div class="stopwatch">
+    <div id="time">00:00:00</div>
+    <button id="startStop">スタート</button>
+    <button id="reset">リセット</button>
+    </div>
+<script src="js/stopwatch.js"></script>
     <address>
     Copyright (C) MegaPx. All Rights Reserved.
     </address>
