ストップウォッチを追加

--- a/stopwatch.html
+++ b/stopwatch.html
@@ -19,8 +19,10 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 <meta name="Keywords" content="レスポンシブ,HTMLテンプレート,ホームページ制作" />
 <meta name="Description" content="汎用ページ、最新レスポンシブHTMLテンプレート no.002。このサイトの説明文を入れてください。" />
 
-<link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="css/sample.css" />
+<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="css/stopwatch.css" />
+
 
 <link href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet"> 
@@ -88,7 +90,7 @@ https://www.megapx.com/contact.htmlのフォームよりお問い合わせくだ
 
 
   <div class="stopwatch">
-    <div id="time">00:00:00</div>
+    <div id="time">00:00:00.000</div>
     <button id="startStop">スタート</button>
     <button id="reset">リセット</button>
     </div>
